--- a/TeoPr_LB_1-4/TeoPr_LB_1-4.vcxproj.filters
+++ b/TeoPr_LB_1-4/TeoPr_LB_1-4.vcxproj.filters
@@ -19,4 +19,7 @@
       <Filter>Файлы ресурсов</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
+  </ItemGroup>
 </Project>
